--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_auth: ^3.1.0
 #  cloud_firestore: ^2.5.1
   google_sign_in: ^5.0.7
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
